...
                $0.title = "Sync"
                $0.onCellSelection({ _, _ in
                    self.syncSettings()
                })
            }
            <<< ButtonRow {
                $0.title = "Logout"
                $0.onCellSelection({ _, _ in
                    self.logoutAction()
                })
            }
//            <<< ButtonRow {
//                $0.title = "Send feedback"
...
